<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 AOSP-Krypton Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <PreferenceCategory android:title="@string/appearance">

        <ListPreference
            android:key="text_size"
            android:title="@string/text_size"
            android:summary="%s"
            android:entries="@array/text_size_entries"
            android:entryValues="@array/text_size_values" />

        <CheckBoxPreference
            android:key="expand_logs"
            android:title="@string/expand_logs_by_default"
            android:summary="@string/expand_logs_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/configuration">

        <MultiSelectListPreference
            android:entries="@array/buffers"
            android:entryValues="@array/buffers"
            android:key="buffer"
            android:title="@string/log_buffers" />

        <EditTextPreference
            android:key="log_display_limit"
            android:title="@string/log_display_limit" />
    </PreferenceCategory>
</PreferenceScreen>